Fixing one more horizontal scrolling issue in tables.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -8,7 +8,7 @@ dl { padding-bottom: 1em; }
 dd { padding-left: 2em; }
 dl ul { margin-bottom: 0em; }
 
-pre code {
+pre code, code pre {
     white-space: pre-wrap;
 }
 table.property-table, .syntax-block code, .example code {
